--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,7 @@ color: #289f75;
 
 body {
   padding-left: 3em;
+  font-weight: 400;
   padding-right: 3em;
   padding-top: 150px;
   margin-bottom: 700px;
@@ -241,21 +242,22 @@ body {
 
 h1.first {
   font-family: 'Lato', sans-serif;
+  font-weight: 700;
   font-size: 1.8em;
   display: block;
   margin-top: 0px;
 }
 h2 {
   font-family: 'Lato', sans-serif;
-  font-size: 1.13em;
   font-weight: 700;
+  font-size: 1.13em;
   margin-top:10px;
   text-align: center;
 }
 h2.bio {
   font-family: 'Lato', sans-serif;
-  font-size: 1.13em;
   font-weight: 700;
+  font-size: 1.13em;
   text-align: left;
   margin-top:-4px;
 }
@@ -396,11 +398,7 @@ a {
 }
 
 
-.fix{
-  position:absolute;
-  margin: 0 auto;
-  width: 200px;
-    }
+
 
     .about-c1 {
       width: 55%;
@@ -410,6 +408,7 @@ a {
       margin: 0 auto;
     }
     .fix{
+      position:absolute;
       margin: 0 auto;
       width: 350px;
 }
